# To-Dentro

./: .gitignore  README.md  app.py  pyproject.toml
migrations/versions/: 10cb2228de79_add_price_coords_and_polls.py  126f070e3b4c_add_photo_url_to_user.py  40f3e915d31b_add_poll_invitation_to_notification.py  78ee20e1751b_add_is_admin_to_user.py  9ec9627ebc90_add_photo_url_to_organization.py  cbb574e36c51_add_poll_id_to_notifications.py
templates/: base.html  index.html
templates/main/: base.html  create_event.html  create_organization.html  create_poll.html  edit_event.html  edit_organization.html  event_details.html  friends.html  home.html  index.html  login.html  my_events.html  my_organizations.html  poll_details.html  polls.html  profile.html  register.html  register_step2.html  user_details.html
tests/: conftest.py  test_main.py  test_models.py  test_polls.py
to_dentro/: __init__.py
to_dentro/ext/admin/: __init__.py
to_dentro/ext/auth/: __init__.py
to_dentro/ext/cli/: __init__.py
to_dentro/ext/cloudinary/: __init__.py
to_dentro/ext/config/: __init__.py
to_dentro/ext/db/: __init__.py
to_dentro/ext/debugtoolbar/: __init__.py
to_dentro/ext/migrate/: __init__.py
to_dentro/ext/wtf/: __init__.py
to_dentro/forms/: main.py  register.py
to_dentro/models/: __init__.py  address.py  category.py  event.py  event_address.py  event_category.py  event_image.py  event_occurrence.py  event_recurrence.py  event_recurrence_weekday.py  follows.py  hangout_poll.py  interested_user.py  notification.py  organization.py  organization_user.py  user.py  user_address.py  user_category.py
to_dentro/services/: cep_service.py  geocoding_service.py  image_service.py
to_dentro/utils/: recurrence.py
to_dentro/views/: main.py
