[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Tô Dentro"
version = "0.1.0"
description = "Tô Dentro! - Plataforma de democratização da divulgação de acesso a eventos locais"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Arthur", email = "bernardopcandido@gmail.com"},
    {name = "Bernardo", email = ""},
    {name = "Carlos", email = ""}
]

dependencies = [
    "Flask>=3.0.0",
    "dynaconf>=3.2.0",
    "Flask-SQLAlchemy>=3.1.1",
    "SQLAlchemy>=2.0.0",
    "Flask-Migrate>=4.0.0",
    "Flask-Admin>=1.6.1",
    "Flask-WTF>=1.2.1",
    "email-validator>=2.1.0",
    "gunicorn>=21.2.0",
    "Flask-Login>=0.6.3",
    "requests>=2.31.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "invoke>=2.2.0",
    "flask-debugtoolbar>=0.14.1",
    "ipython>=8.15.0"
]

[tool.setuptools]
packages = ["to_dentro"]

[tool.black]
line-length = 79
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 79